--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,8 @@ github_username:  j0ez1
 
 # Build settings
 markdown: kramdown
-theme: minima
+#theme: minima # default
+remote_theme: pages-themes/primer@v0.2.0
 plugins:
   - jekyll-feed
   - jekyll-remote-theme
